--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/newotobuy/otoBuy#readme",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "pg": "^7.10.0",
