--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
   "homepage": "https://github.com/newotobuy/otoBuy#readme",
   "dependencies": {
     "bcrypt": "^3.0.6",
-    "connect-session-sequelize": "^6.0.0",
     "bcrypt-nodejs": "0.0.3",
+    "chart.js": "^2.8.0",
+    "connect-session-sequelize": "^6.0.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
